Refactor code formatting and improve consistency: adjust indentation and spacing across multiple files for better readability and maintainability.